--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 crop_production_model.pkl filter=lfs diff=lfs merge=lfs -text
 filename filter=lfs diff=lfs merge=lfs -text
+crop_yield_prediction_model.pkl filter=lfs diff=lfs merge=lfs -text
