--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-<<<<<<< HEAD
 streamlit
-scikit-learn
-=======
-joblib==1.3.2
-numpy==2.2.1
-streamlit==1.41.1
+numpy
 pandas
 scikit-learn
->>>>>>> 92fdd7865c4753c66384ee99c80dd9b48328ea87
+joblib
+matplotlib
+seaborn
+git-lfs
