--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-python==3.11
-streamlit
+# Force Streamlit to use a compatible Python version
+python==3.11.5
+
+# Core app dependencies
+streamlit==1.38.0
 numpy
 pandas
-scikit-learn
+scikit-learn==1.5.2
 joblib
 matplotlib
 seaborn
 git-lfs
-
